# view.md

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  prd.md  tailwind.config.js  tsconfig.json  vite.config.mts
.github/workflows/: release.yml
scripts/: build.js  dev.js
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/main/: main.ts  preload.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  electron.d.ts  index.css  main.tsx  prism-setup.ts  tauri-bridge.ts
src/renderer/src/components/: Reader.tsx  Search.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
